# python_agile

./: .gitignore  README.md  data.json  menu.json  orders.json  pyproject.toml
base/: __init__.py
tests/: test_base.py
