[project]
name = 'base'
version = '0.0.1'

[project.optional-dependencies]
test = ['pytest', 'pytest-xdist', 'pytest-isort', 'pytest-cov', 'coverage[toml]']

[tool.pytest.ini_options]
addopts = '--isort'

[tool.coverage.run]
branch = true
include = ['tests/*', 'base/*']

[tool.coverage.report]
exclude_lines = ['pragma: no cover', 'def __repr__', 'raise NotImplementedError']
omit = ['.*']

[tool.isort]
default_section = 'FIRSTPARTY'
multi_line_output = 4